[DAQ-4435] use axes of selected malcolm device as tomo map scan axes
Change-Id: I182b8b3398d6d225f9be166004f0c4f43859f537